--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Zelal Aksoy is introducing some dresses in zara </h1>
     <p>Hello everyone, This my blog page. I want to talk about myself first. I graduated from the <em>Gazi University</em> in 2019. I am working in <strong>Zara</strong> for a while and I became an expert. So I will focus on some kind dresses below that you may consider to check.</p>
     </head>
-    <p>Click <a href ="https://www.zara.com/" target="_blank">here</a> to visit Zaza home page.</p>
+    <p>Click <a href ="https://www.zara.com/" target="_blank">here</a> to visit Zara home page.</p>
     </div>
      <div>
       <h3>T-shirts</h3>
